fix: suggested auth dark mode

--- a/src/components/modals/SuggestAuth/SuggestAuth.css
+++ b/src/components/modals/SuggestAuth/SuggestAuth.css
@@ -12,6 +12,7 @@
   margin-top: 2.2rem;
   font-size: 1.6rem;
   font-weight: 900;
+  color: black;
 }
 
 .suggest-auth-text {
@@ -32,4 +33,8 @@
   color: var(--primary-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   margin-bottom: 1.2rem;
+}
+
+.white {
+  color: white;
 }
